[package]
name = "desktop-cube-baby"
version = "0.2.0"
edition = "2024"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies.fastrand]
version = "2.3"

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "multi_threaded",
    "png",
    "wayland",
    "x11",
]
