# SPDX-License-Identifier: GPL-3.0-or-later
#
# Copyright © 2025 Jaxydog
#
# This file is part of Desktop Cube Baby.
#
# Desktop Cube Baby is free software: you can redistribute it and/or modify it under the terms of the GNU General
# Public License as published by the Free Software Foundation, either version 3 of the License, or (at your option)
# any later version.
#
# Desktop Cube Baby is distributed in the hope that it will be useful, but WITHOUT ANY WARRANTY; without even the
# implied warranty of MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE. See the GNU General Public License for more
# details.
#
# You should have received a copy of the GNU General Public License along with Desktop Cube Baby. If not,
# see <https://www.gnu.org/licenses/>.

[package]
name = "desktop-cube-baby"
version = "0.2.0"
edition = "2024"

[features]
multi_threaded = ["bevy/multi_threaded"]
visible_console = []
wayland = ["bevy/wayland"]
x11 = ["bevy/x11"]

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[profile.release]
codegen-units = 1
lto = "fat"

[dependencies.fastrand]
version = "2.3"

[dependencies.bevy]
version = "0.15"
default-features = false
features = [
    "bevy_asset",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_render",
    "bevy_sprite",
    "bevy_state",
    "bevy_window",
    "bevy_winit",
    "png",
]
